--- a/css/userempresa.css
+++ b/css/userempresa.css
@@ -25,15 +25,11 @@ button {
     padding: 10px 20px;
     border-radius: 5px;
 }
-.lk{
-    width: 50px;
-    margin-right: -150px;
-
+.txt-card i{
+    font-size: 30px;
+    color: black;
 }
-.gh{
-    width: 50px;
 
-}
 /* MENU LATERAL */
 
 nav.menu-lateral {
@@ -87,7 +83,7 @@ ul li.ativo {
 }
 
 ul li.item-menu:hover {
-    background-color: #2e71c6;
+    background-color: #38c1a0;
     box-shadow: 0 0 15px #2e71c6;
 }
 
@@ -116,6 +112,193 @@ ul li.item-menu .icon > i {
     margin-left: 30%;
     color: #fff;
 }
+/* ACESSIBILIDADE */
+
+    /* BOTÃO DA ACESSIBILIDADE */
+
+    .fixo {
+        position: fixed;
+        bottom: 10px;
+        right: 5px;
+        padding: 10px 15px;
+        background-color: transparent;
+        border: none !important;
+        border-radius: 50%;
+        cursor: pointer;
+        font-size: 24px;
+        z-index: 1000;
+    }
+    
+    .fixo:hover {
+        box-shadow: 0 0 0 !important;
+    }
+    
+    .fixo i {
+        color: #fff;
+    }
+    
+    .acessibilidade {
+        text-align: center;
+        display: none;
+        position: fixed;
+        bottom: 80px;
+        right: 10px;
+        background-color: #fff;
+        padding: 15px;
+        border-radius: 8px;
+        z-index: 1000;
+    }
+    
+    .acessibilidade.ativo {
+        display: block;
+    }
+    
+    .acess {
+        text-transform: uppercase;
+        color: #000;
+    }
+    
+    .modo-escuro {
+        top: 6px;
+        margin: 12px 0;
+    }
+    
+        /* AUMENTAR E DIMINUIR FONTE */
+    
+    .maior-menor button {
+        padding: 3px 3px;
+        margin-left: 4px;
+    }
+    
+        /* CLARO E ESCURO */
+    
+    .trilho {
+        width: 60px;
+        height: 30px;
+        background-color: #818181;
+        border-radius: 150px;
+        position: relative;
+        cursor: pointer;
+    }
+    
+    .trilho .indicador {
+        width: 30px;
+        height: 30px;
+        background-color: #000000;
+        border-radius: 50%;
+        transform: scale(.9);
+        position: absolute;
+        left: 0;
+        transition: .5s;
+    }
+    
+    .trilho.dark {
+        background-color: #a9a9a9;
+    }
+    
+    .trilho.dark .indicador {
+        left: 30px;
+        background-color: #fff;
+    }
+    
+    body.dark {
+        background-color: #d5d4d4!important;
+    }
+
+    body.dark topo-do-site {
+        background-color: #000!important;
+    }
+    
+    body.dark .txt-3,
+    body.dark footer {
+        background-color: #2e71c6;
+    }
+    
+    body.dark header ul li a,
+    body.dark .topo-do-site ul li,
+    body.dark .txt-3 *,
+    body.dark footer *,
+    body.dark footer i,
+    body.dark .fixo i,
+    body.dark .menu-mobile .btn-login i,
+    body.dark .btn-plano {
+        color: #fff  !important;
+    }
+    
+    body.dark h1,
+    body.dark i,
+    body.dark i,
+    body.dark ul li a:hover {
+        color: #2e71c6 !important; 
+    }
+    
+    body.dark h3,
+    body.dark h4,
+    body.dark p,
+    body.dark ul li, 
+    body.dark a {
+        color: #000;
+    }
+    
+    body.dark span,
+    body.dark .planos h3,
+    body.dark .txt-topo-site i,
+    body.dark .p-planos i {
+        color: #38c1a0 !important;
+    }
+    
+    body.dark button {
+        border: 2px solid #2e71c6;
+        color: #2e71c6; 
+    }
+    
+    body.dark button:hover {
+        box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
+        text-shadow: 0 0 15px #2e71c6; 
+    }
+    
+    body.dark .btn-txt-2 button {
+        border: 2px solid #38c1a0;
+        color: #38c1a0;
+    }
+    
+    body.dark .btn-txt-2 button:hover {
+        box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
+        text-shadow: 0 0 15px #38c1a0;
+    }
+    
+    body.dark .p-planos,
+    body.dark .txt-box,
+    body.dark .depoimentos-box img {
+        box-shadow: 0 0 10px #2e71c6;
+        border: 2px solid #2e71c6;
+    }
+     
+    body.dark .txt-box:hover {
+        box-shadow: 0 0 30px #2e71c6;
+    }
+    
+    body.dark .menu-mobile nav ul li a:hover {
+        background-color: #2e71c6;
+    }
+    
+    
+    body.dark .menu-desktop a:hover, .login-topo a:hover {
+        box-shadow: -1px 2px 2px #2e71c6;
+        color: #2e71c6;
+    }
+    
+    body.dark .dropdown:hover .dropdown-menu {
+        box-shadow: 1px 2px 2px #2e71c6;
+    }
+    
+    body.dark .menu-mobile .btn-login {
+        background-color: #2e71c6;
+    }
+    
+    body.dark .menu-mobile .btn-login:hover {
+        box-shadow: 0 0 15px #2e71c6;
+    }
 
 /* CARDS */
 
@@ -129,7 +312,7 @@ section.cards {
 .card {
     background-color: #c2c2c2;
     width: 760px;
-    height: 210px;
+    height: 230px;
     border-radius: 12px;
     box-shadow: 0 5px 12px #38c1a0;
     margin: 30px;
