--- a/css/stylequemsomos.css
+++ b/css/stylequemsomos.css
@@ -1,9 +1,9 @@
 /* ESTILO DA PÁGINA */
 
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;   
 }
 
 body {
@@ -15,7 +15,7 @@ body {
 }
 
 .interface {
-    margin: 1080px;
+    margin: 1280px;
     margin: 0;
 }
 
@@ -44,212 +44,103 @@ button:hover {
     transform: scale(1.05);
 }
 
-/* ACESSIBILIDADE */
-
-/* BOTÃO DA ACESSIBILIDADE */
-
-.fixo {
-    position: fixed;
-    bottom: 10px;
-    right: 5px;
-    padding: 10px 15px;
-    background-color: transparent;
-    border: none !important;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 24px;
-    z-index: 1000;
+h1 {
+    font-size: 50px;
+    line-height: 50px;
+    color: #38c1a0;
 }
 
-.fixo:hover {
-    box-shadow: 0 0 0 !important;
-}
-
-.fixo i {
+h2 {
+    font-size: 30px;
     color: #fff;
 }
 
-.acessibilidade {
-    text-align: center;
-    display: none;
-    position: fixed;
-    bottom: 80px;
-    right: 10px;
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 8px;
-    z-index: 1000;
+h3 {
+    font-size: 18px;
+    color: #fff;
 }
 
-.acessibilidade.ativo {
-    display: block;
+h4 { 
+    font-size: 15px;
+    padding: 10px;
 }
 
-.acess {
-    text-transform: uppercase;
-    color: #000;
+p {
+    font-size: 14px;
+    color: #fff;
 }
 
-.modo-escuro {
-    top: 6px;
-    margin: 12px 0;
+i {
+    font-size: 40px;
+    color: #38c1a0; 
 }
 
-/* AUMENTAR E DIMINUIR FONTE */
-
-.maior-menor button {
-    padding: 3px 3px;
-    margin-left: 4px;
+a {
+    color: #fff;
 }
 
-/* CLARO E ESCURO */
+/* EFEITO SCROOLREVEAL*/
 
-.trilho {
-    width: 60px;
-    height: 30px;
-    background-color: #818181;
-    border-radius: 150px;
-    position: relative;
-    cursor: pointer;
+.efeito-txt-topo, .efeito-titulo, .efeito-box-1, .efeito-box-2, .efeito-box-3, .efeito-box-4, .efeito-serv-1, .efeito-serv-2, .efeito-quem-somos, .efeito-depoimentos-1, .efeito-depoimentos-2, .efeito-depoimentos-3, .efeito-depoimentos-4, .efeito-depoimentos-5, .efeito-planos, .efeito-ajuda {
+    visibility: hidden;
 }
 
-.trilho .indicador {
-    width: 30px;
-    height: 30px;
-    background-color: #000000;
-    border-radius: 50%;
-    transform: scale(.9);
+/* ESTILO TOPO-DO-SITE */
+
+section.topo-do-site{
+    padding: 120px 4%;
+}
+
+section.topo-do-site .flex {
+    align-items: center;
+    justify-content: center;
+}
+
+.topo-do-site video {
     position: absolute;
+    top: 0;
     left: 0;
-    transition: .5s;
+    object-fit: cover;
+    width: 100%;
+    height: 600px;
+    background-color: #000;
+    opacity: 0.3;
 }
 
-.trilho.dark {
-    background-color: #a9a9a9;
+.txt-topo-site {
+    padding: 70px 400px 0 0;
+    position: relative;
+    z-index: 1;
 }
 
-.trilho.dark .indicador {
-    left: 30px;
-    background-color: #fff;
+.txt-topo-site ul li {
+    font-size: 17px;
+    text-align: justify;
+    list-style-type: none;
+    margin: 10px 30px;
 }
 
-
-body.dark .txt-3,
-body.dark footer {
-    background-color: #2e71c6;
+.topo-do-site i {
+    color: #2e71c6;
+    margin-right: 10px;
+    font-size: 18px;
 }
 
-body.dark header ul li a,
-body.dark .topo-do-site ul li,
-body.dark .txt-3 *,
-body.dark .menu-mobile .btn-login i {
-    color: #2e71c6 !important;
-}
-body.dark footer *,
-body.dark footer i,
-body.dark .fixo i{
-    color: black !important;
+.btn-txt {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
 }
 
-body.dark h1,
-body.dark i,
-body.dark i,
-body.dark ul li a:hover {
-    color: #2e71c6 !important;
-}
-
-
-
-body.dark button {
+.btn-txt-2 button {
     border: 2px solid #2e71c6;
     color: #2e71c6;
 }
 
-
-body.dark .menu-mobile nav ul li a:hover {
-    background-color: #2e71c6;
+.btn-txt-2 button:hover {
+    box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
+    text-shadow: 0 0 15px #2e71c6;
 }
-
-
-body.dark .menu-desktop a:hover,
-.login-topo a:hover {
-    box-shadow: -1px 2px 2px #2e71c6;
-    color: #2e71c6;
-}
-
-body.dark .dropdown:hover .dropdown-menu {
-    box-shadow: 1px 2px 2px #2e71c6;
-}
-
-body.dark .menu-mobile .btn-login {
-    background-color: #2e71c6;
-}
-
-body.dark .menu-mobile .btn-login:hover {
-    box-shadow: 0 0 15px #2e71c6;
-}
-
-/* ESTILO CABEÇALHO */
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 7;
-    width: 100%;
-    height: 100px;
-    padding: 10px 90px;
-    box-sizing: border-box;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 1000;
-}
-
-header nav.menu-desktop ul {
-    list-style-type: none;
-}
-
-header nav.menu-desktop ul li {
-    margin-left: 25px;
-    display: inline-block;
-}
-
-header nav.menu-desktop ul li a {
-    color: #38c1a0;
-    text-decoration: none;
-    font-size: 18px;
-    text-transform: uppercase;
-    padding: 15px;
-}
-
-.menu-desktop a:hover,
-.login-topo a:hover {
-    box-shadow: -1px 2px 2px #38c1a0;
-    color: #38c1a0;
-}
-
-.dropdown-menu {
-    position: absolute;
-    display: none;
-    min-width: 150px;
-}
-
-.dropdown-menu a {
-    display: block;
-}
-
-.dropdown:hover .dropdown-menu {
-    display: block;
-    box-shadow: 1px 2px 2px #38c1a0;
-    background-color: #000000a9;
-    margin-bottom: 20px;
-    margin-top: 15px;
-}
-
-.dropdown i {
-    font-size: 20px;
-    margin: 0 0 0 2px;
-}
-
 .container {
     position: relative;
 }
@@ -259,7 +150,7 @@ header nav.menu-desktop ul li a {
 .legenda3 {
     width: 65%;
     height: 25%;
-    z-index: 50;
+    z-index: 0;
     overflow-y: auto;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(20px);
@@ -324,249 +215,376 @@ header nav.menu-desktop ul li a {
 
 h1 {
     font-family: sans-serif;
-    color: #ffffff;
+    color: #38c1a0;
     margin-top: 20px;
     margin-left: 10px;
 }
+/* ESTILO SECTION TXT-2 */
 
-/* POSIÇÃO DO MENU */
-
-.logo img {
-    width: 120px;
-    height: 60px;
-    position: absolute;
-    top: 18%;
-    left: 4%;
-}
-
-.menu-desktop {
-    position: absolute;
-    float: left;
-    top: 40%;
-    left: 15%;
-}
-
-.login-topo {
-    position: absolute;
-    left: 140%;
-}
-
-.btn-topo {
-    position: absolute;
-    top: 30%;
-    right: 2%;
-}
-
-/* ESTILO TOPO-DO-SITE */
-
-.topo-do-site video {
-    top: 0;
-    left: 0;
-    opacity: 0.3;
-}
-
-/* ESTILO FOOTER */
-
-footer {
+section.txt-2 {
     padding: 40px 4%;
-    background-color: #38c1a0;
-    width: 1920px;
-    margin-top: -6px;
 }
 
-footer .flex {
-    justify-content: space-between;
+section.txt-2 .flex {
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-.footer-1 i {
-    color: #fff;
-    font-size: 25px;
-    margin-left: 10px;
-}
-
-.footer-2 {
+.txt-2 {
     text-align: center;
 }
 
-.footer-2 i {
-    font-size: 15px;
+.txt-2 .txt-box {
+    padding: 30px;
+    background-color: #80808021;
+    width: 280px;
+    height: 350px;
+    overflow-y: auto;
+    margin: 70px 0 50px 0;
+    border: 2px solid #38c1a0;
+}
+
+.txt-2 .txt-box:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 30px #38c1a0;
+}
+
+.txt-2 .txt-box::-webkit-scrollbar {
+    width: 10px
+}
+
+.txt-2 .txt-box::-webkit-scrollbar-track {
+    background-color: #2e71c6;
+}
+
+.txt-2 .txt-box::-webkit-scrollbar-thumb{
+    background-color: #38c1a0;
+    border-radius: 20px;
+    border: 2px solid #ffffff;
+}
+
+.txt-box p {
+    font-size: 16px;
+    margin: 15px 0 0px 0;
+}
+
+/* ESTILO SECTION ENCONTRE */
+
+section.encontre {
+    padding: 40px 4%;
+}
+
+section.encontre .flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+}
+
+.serv-box button {
+    padding: 100px;
+    background-color: #80808021;
+    height: 350px;
+    width: 450px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.serv-box {
+    margin: 20px 0 110px 0;
+}
+
+.serv-box p {
+    margin: 10px 0 10px 0;
+}
+
+/* ESTILO QUEM SOMOS */
+
+section.txt-3 {
+    padding: 170px 8%;
+    background-color: #38c1a0;
+}
+
+section.txt-3 .flex {
+    align-items: center;
+    gap: 40px;
+}
+
+.txt-3 h1 {
     color: #fff;
+    font-size: 90px;
+    line-height: 70px;
+    padding: 0 100px 0 0;
 }
 
-.footer-2 a {
-    text-decoration: none;
+.txt-3 p {
+    font-size: 17px;
+    text-align: justify;
 }
 
+/* ESTILO AVALIAÇÕES DE USUÁRIOS */
 
-/* ESTILO MENU MOBILE */
-
-.btn-abrir-menu {
-    display: none;
+section.depoimentos{
+    padding: 40px 4%;
 }
 
-.btn-abrir-menu i {
-    position: fixed;
-    top: 4%;
-    right: 5%;
+section.depoimentos .flex {
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
 }
 
-.menu-mobile {
-    background-color: #000000cb;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 99999;
-    width: 0%;
-    overflow: hidden;
-    transition: .2s;
+.depoimentos p {
+    padding: 15px;
 }
 
-.menu-mobile.abrir-menu {
-    width: 70%;
+.depoimentos-box img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0 0 20px #38c1a0;
+    border: 2px solid #38c1a0;
 }
 
-.menu-mobile.abrir-menu~.overlay-menu {
-    display: block;
+/* ESTILO PLANOS */
+
+section.planos{
+    padding: 70px 4%;
 }
 
-.menu-mobile .btn-fechar {
-    padding: 20px 5%;
+section.planos .flex {
+    align-items: center;
+    justify-content: space-around;
 }
 
-.menu-mobile .btn-fechar i {
-    color: #38c1a0;
-    font-size: 30px;
+.planos .p-planos {
+    padding: 50px;
+    margin: 60px 0 0 0;
+    background-color: #80808021;
+    border: 2px solid #38c1a0;
+    box-shadow: 0 0 10px #38c1a0;
 }
 
-.menu-mobile nav ul {
-    text-align: right;
+.planos h1 {
+    padding: 10px;
+    font-size: 38px;
+    text-align: center;
 }
 
-.menu-mobile nav ul li a {
-    color: #fff;
-    font-size: 20px;
-    font-weight: 300;
-    padding: 20px 8%;
-    display: block;
-    text-decoration: none;
+.planos p { 
+    text-align: center;
+}
+
+.planos h3 {
+    font-size: 35px;
+    text-align: center;
     text-transform: uppercase;
+    color: #2e71c6
 }
 
-.menu-mobile nav ul li a:hover {
-    background-color: #38c1a0;
-    color: #000 !important;
+.planos h4 {
+    font-size: 75px;
+    padding: 20px;
+    text-align: center;
 }
 
-.menu-mobile .btn-login {
-    background-color: #38c1a0;
-    font-size: 15px;
-    text-decoration: underline;
-    text-align: left;
+.planos ul li {
+    list-style-type: none;
+    font-size: 16px;
 }
 
-.menu-mobile .btn-login i {
-    color: #fff;
+.planos i {
+    font-size: 18px;
     margin-right: 20px;
+    color: #2e71c6;
 }
 
-.menu-mobile .btn-login:hover {
-    box-shadow: 0 0 15px #38c1a0;
+.planos .btn-planos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
 }
 
-.overlay-menu {
-    background-color: #000000a9;
+/* ESTILO PRECISO DE AJUDA */
+
+section.ajuda{
+    padding: 30px 4%;
+    
+}
+
+section.ajuda .flex {
+    align-items: center;
+    justify-content: space-around;
+}
+
+.ajuda .p-ajuda {
+    margin: 20px 15px 20px 15px;
+}
+
+.ajuda i {
+    padding: 20px;
+    font-size: 35px;
+    display: flex;
+}
+
+.ajuda ul li{
+    list-style-type: none;
+}
+
+.ajuda p {
+    margin: 10px 0 10px 0;
+}
+
+.ajuda a {
+    font-size: 15px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.ajuda a:hover {
+    color: #38c1a0;
+}
+footer{
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 88888;
-    display: none;
 }
+ 
+/* RESPONSIVIDADE */ 
 
-/*Responsividade*/
-
-@media screen and (max-width: 768px) {
-
-    /* CABECALHO */
-
+@media screen and (max-width: 1020px){
     /* CLASSES GERAIS */
-    .flex {
+    .flex{
         flex-direction: column;
     }
 
-    .topo-do-site .flex {
-        flex-direction: column-reverse;
-    }
-
-    .legendas {
-        flex-direction: column-reverse;
-    }
-
-    h1 {
-        font-size: 11px;
-    }
-
-    .legenda {
-        top: 120px;
-        height: 205px;
-    }
-
-    .legenda2 {
-        top: 338px;
-        height: 205px;
-    }
-
-    .legenda3 {
-        top: 555px;
-        height: 205px;
-    }
-
-    .legenda,
-    .legenda2,
-    .legenda3 {
-        margin-left: -280px;
-    }
-
     /* MENU */
-    .menu-desktop,
-    .btn-topo {
+    .menu-desktop, .btn-topo {
         display: none;
-    }
+    }    
 
     .btn-abrir-menu {
         display: block;
     }
 
-    /* FOOTER */
-
-    footer {
-        padding: 40px 4%;
-        width: 390px;
-        margin-top: -5px;
+    h1 {
+        font-size: 45px;
     }
 
-    footer .flex {
-        flex-direction: column;
+    /* TOPO DO SITE */
+
+    section.topo-do-site{
+    padding: 60px 6%;
     }
 
-    .footer-1 {
-        margin-left: 118px;
-        margin-bottom: 10px;
+    .txt-topo-site {
+        padding-right: 20px;
+    }
+    
+    .topo-do-site h1 {
+        text-align: center;
+        font-size: 30px;
+        line-height: 30px;
     }
 
-    .footer-2 {
+    /* TXT-2 */
+
+    section.txt-2 {
+        padding: 40px 8%;
+    }
+
+    .txt-2 .txt-box {
+        height: 330px;
+        width: 300px;
+    }
+
+    .txt-2 .txt-box {
+        margin: 50px 0 30px 0;
+    }
+
+    /* ENCONTRE */
+
+    section.encontre {
+        padding: 60px 4%;
+    }
+
+    .serv-box button {
+        height: 350px;
+        width: 300px;
+        padding: 0;
+    }
+
+    .serv-box {
+        margin: 5px 0;
+    }
+
+    /* QUEM SOMOS */
+
+    section.txt-3 {
+        padding: 90px 8%;
+    }
+
+    .txt-3 {
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    }
+
+    .txt-3 h1 {
+        text-align: center;
+        font-size: 55px;
+        padding: 0;
+    }
+    
+    .txt-3 p {
+        font-size: 20px;
         text-align: center;
     }
 
-    .footer-2 i {
-        font-size: 15px;
-        color: #fff;
+    /* DEPOIMENTOS */
+   
+    section.depoimentos{
+        padding: 50px 8%;
     }
 
-    .footer-2 a {
-        text-decoration: none;
+    .depoimentos p {
+        margin: 0 0 30px 0;
+    }
+    .legenda, .legenda2, .legenda3{
+        justify-content: center;
+        align-items: center;
     }
 
+    /* PLANOS */
+
+    section.planos{
+        padding: 77px 4%;
+    }
+    
+    .planos p { 
+        font-size: 18px;
+        margin: 10px 0 10px 0;
+    }
+
+    .planos h4 {
+        font-size: 55px;
+    }
+
+    /* AJUDA */
+
+    section.ajuda{
+        padding: 60px 5%;
+    }
+
+    /* FOOTER */
+
+    footer {
+        padding: 40px 8%;
+    }
+
+    .footer-2 {
+        margin-top: 15px;
+    }
 }
