--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -25,7 +25,8 @@ body {
 }
 
 .container {
-    background-color: #1a1a2e;
+    background-color: #80808021;
+    border: 2px solid #38c1a0;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
@@ -52,7 +53,7 @@ body {
 }
 
 .label-float input:focus {
-    border-color: #00d1ff;
+    border-color: #38c1a0;
     outline: none;
 }
 
@@ -60,7 +61,6 @@ body {
     position: absolute;
     top: 50%;    left: 10px;
     transform: translateY(-50%);
-    background-color: #1a1a2e;
     padding: 0 5px;
     transition: 0.3s;
     color: #aaa;
@@ -74,7 +74,7 @@ label {
     top: -10px;
     left: 10px;
     font-size: 12px;
-    color: #00d1ff;
+    color: #38c1a0;
 }
 
 i.fa-eye {
@@ -93,4 +93,12 @@ i.fa-eye {
 .enter button{
     padding: 10px 20px;
     border-radius: 500px;
+}
+
+.btntest button {
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 15px;
+    background-color: #38c1a0;
+    margin: 10px 10px 0 0;
 }
