--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -27,7 +27,7 @@ body {
 .container {
     background-color: #80808021;
     border: 2px solid #38c1a0;
-    padding: 40px;
+    padding: 60px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     width: 100%;
@@ -38,7 +38,10 @@ body {
 .label-float {
     position: relative;
     margin-bottom: 20px;
+    margin-left: -20px;
+    
 }
+
 
 .label-float input {
     width: 100%;
@@ -46,9 +49,9 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    background: none;
+    background-color: #323232;
     transition: border 0.3s ease;
-    color: #fff;
+    color: #38c1a0;
 
 }
 
@@ -63,7 +66,7 @@ body {
     transform: translateY(-50%);
     padding: 0 5px;
     transition: 0.3s;
-    color: #aaa;
+    color: #38c1a0;
     pointer-events: none;
 }
 
@@ -101,4 +104,8 @@ i.fa-eye {
     font-size: 15px;
     background-color: #38c1a0;
     margin: 10px 10px 0 0;
+    border: none;
+}
+.Genero {
+    color: #38c1a0;
 }
