--- a/css/acessibilidade.css
+++ b/css/acessibilidade.css
@@ -274,7 +274,7 @@ footer .flex {
         bottom: 80px;
         right: 10px;
         background-color: #fff;
-        padding: 15px;
+        padding: 10px;
         border-radius: 8px;
         z-index: 1000;
     }
@@ -283,13 +283,14 @@ footer .flex {
         display: block;
     }
     
-    .acess {
+    .acessibilidade h6{
         text-transform: uppercase;
         color: #000;
+        font-size: 8px;
     }
     
     .modo-escuro {
-        top: 6px;
+        top: 2px;
         margin: 12px 0;
     }
     
