--- a/css/userfreela.css
+++ b/css/userfreela.css
@@ -108,13 +108,14 @@ section.cards {
 }
 
 .card {
-    background-color: #c2c2c2;
+    background-color: #d9d9d9;
     width: 760px;
     height: auto;
     border-radius: 12px;
     box-shadow: 0 5px 12px #38c1a0;
     margin: 30px;
     padding: 20px;
+    color: #000;
 }
 
 .card-box {
@@ -151,19 +152,15 @@ section.cards {
 .card h1 {
     font-size: 28px;
     font-weight: 900;
-    margin-bottom: 0;
-    color: black;
 }
 
 .card h3 {
     font-size: 21px;
     margin-bottom: 5px;
-    color: black;
 }
 
 .card p {
     font-size: 14px;
-    color: #000000;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
