--- a/css/userempresa.css
+++ b/css/userempresa.css
@@ -170,3 +170,70 @@ section.cards {
     margin-left: 10px;
     font-size: 25px;
 }
+
+@media screen and (max-width: 1020px) {
+
+    /* DIV CLASS */
+
+    .flex {
+        flex-direction: column;
+        margin-left: 20%;
+    }
+
+    /* PADRÃO */
+
+    body {
+        overflow: auto;
+    }
+
+    h1 {
+        font-size: 48px;
+    }
+    
+    h2 {
+        font-size: 25px;
+    }
+    
+    h3 {
+        font-size: 20px;
+    }
+
+    /* MENU */
+
+    nav.menu-lateral {
+        width: 50px;
+        height: 100%;
+        padding: 0px 0px;
+    }
+    
+    nav.menu-lateral.expandir {
+        height: 100%;
+    }
+
+    .btn-expandir {
+        padding: 5px;        
+    }
+
+    ul li.item-menu .icon > i {
+        margin-left: 19%
+    }
+
+    .menu-lateral .logo-ue img {
+        width: 95px;
+        margin-top: 10px;
+        margin-left: 2px;
+    }
+
+    .card {
+        width: auto;
+        height: auto;
+        margin: 30px;
+        padding: 20px;
+        color: #000;
+    }
+
+    .btn-card button {
+        display: flex;
+        flex-direction: column;
+    }
+}
