--- a/css/userfreela.css
+++ b/css/userfreela.css
@@ -213,9 +213,15 @@ section.cards {
     }
 
     .menu-lateral .logo-ue img {
-        width: 95px;
+        width: 89px;
         margin-top: 10px;
         margin-left: 2px;
+    }
+
+    /* PÁGINA */
+
+    section.cards {
+        padding: 20px 8%;
     }
 
     .card {
