--- a/css/empresaoufreela.css
+++ b/css/empresaoufreela.css
@@ -21,12 +21,13 @@
     border: 2px solid #38c1a0;
     box-shadow: 0 5px 15px #506e67;
     width: 500px;
-    height: 300px;
+    height: 400px;
     text-align: center;
+
   }
   
   .logo-ef img {
-    width: 200px;
+    width: 220px;
     height: auto;
   }
 
@@ -34,13 +35,17 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 40px;
+      margin-top: 50px;
+  }
+  .entrar{
+    margin-top: 45px;
   }
   
   .escolha button {
-      padding: 20px 50px;
       background-color: #38c1a0;
       border: 2px solid #38c1a0;
+      width: 200px;
+      height: 50px;
       color: #fff;
       border: none;
       border-radius: 4px;
