--- a/style-planosempresas.css
+++ b/style-planosempresas.css
@@ -23,6 +23,14 @@ h1 {
     flex-wrap: wrap;
 }
 
+.plano1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
 .planos {
     display: flex;
     justify-content: center;
@@ -89,6 +97,13 @@ h1 {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
+.btn-plano button{
+    position: absolute;
+    top: 40px;
+    
+}
+
 
 .btn-plano:hover {
     background-color: #2e71c6;
